Fixed issue in HTML that was causing URCaps to not load in Polyscope

--- a/src/main/resources/com/hirebotics/hbcloudconnector/programnode.html
+++ b/src/main/resources/com/hirebotics/hbcloudconnector/programnode.html
@@ -7,8 +7,7 @@
                 display: inline-block;
                 width: 200px;
                 height: 28px;
-                vertical-align: middle;
-                margin: 0px;
+
             }
 
             div.spacer {
@@ -19,8 +18,7 @@
 	 		    display: inline-block;
 	 		    width: 20px;
 	 		    height: 28px;
-	 		    vertical-align: middle;
-	 		    margin: 0px;
+
 	 		}
 
     </style>
@@ -30,10 +28,10 @@
 <form>
     <h3> Choose the API you want to use</h3>
     <input class="radio" type="radio" name="api" id="startprogram" style="width: 20px"/> Start Program<br>
-    <input type="radio" name="api" id="madepart" style="width:20px"/><label style="width: 120px">Made a Part &nbsp;</label><input type="number" id="numpartsmade" style="width:40px"/><br>
+    <input type="radio" name="api" id="madepart" style="width:20px"/><label style="width: 120px"> Made a Part     QTY Made:</label><input type="number" id="numpartsmade" style="width: 100px"/><br>
     <p>-----------------------------------------------------------------------------------------</p>
     <div class="spacer"></div>
-    <input type="radio" name="api" id="sendmessage" style="width: 20px"/> Send a Messsage
+    <input type="radio" name="api" id="sendmessage" style="width: 20px"/> Send a Messsage<br>
     <div class="spacer"></div>
     Select Type of Message: <select id="selectmessagetype" style="width: 100px"></select><br>
     <!--<input type="radio" name="api" id="senderrormessage" style="width: 20px"> Send Error Message<br><br>-->
